--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "chatbot",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://arunnk`.github.io/chatbot",
   "dependencies": {
     "babel-eslint": "10.0.2",
     "bootstrap": "^4.3.1",
@@ -12,6 +13,7 @@
     "eslint-plugin-import": "2.8.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "7.4.0",
+    "gh-pages": "^2.1.1",
     "lodash": "^4.17.15",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
@@ -27,7 +29,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
